R4/Files/Templates/Designs/R4/Assets/_src/scss/4-utilities/_icon.scss
$icon-size-base: 1rem;

$icon-sizes: (
	"1": $icon-size-base / 1.33,
	"2": $icon-size-base,
	"3": $icon-size-base * 1.5,
	"4": $icon-size-base * 2,
	"5": $icon-size-base * 3,
	"6": $icon-size-base * 4,
	"7": $icon-size-base * 5
);
	
@each $name, $size in $icon-sizes {
	.icon-#{$name} {
		display: flex;
	}
	.icon-#{$name} svg {
		height: $size;
		width: $size;
		display: inline-block;
		vertical-align: baseline;
	}
}

